--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
