--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-concise-slider": "^3.4.4",
+    "vue-headroom": "^0.10.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
