--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.0",
     "vue-concise-slider": "^3.4.4",
     "vue-headroom": "^0.10.1",
     "vue-router": "^3.2.0",
